--- a/app/Views/homepage.html
+++ b/app/Views/homepage.html
@@ -3,14 +3,8 @@
 {% block title  %}Inicio{% endblock %}
 
 {% block content %}
-    <div class="container">
-        <div class="row">
-            <div class="col-md-6 col-md-offset-3">
-                <div class="jumbotron">
-                    <h1>Sistema de Inventarios</h1>
-                    <p>*Trabajo en Progreso*</p>
-                </div>
-            </div>
-        </div>
+    <div class="jumbotron text-center">
+        <h1>Sistema de Inventarios</h1>
+        <p>*Trabajo en Progreso*</p>
     </div>
 {% endblock %}
