--- a/app/Views/templates/base.html
+++ b/app/Views/templates/base.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">\
+    <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 
     <title>{% block title %}{% endblock %}</title>
 
@@ -19,6 +19,7 @@
     <![endif]-->
 </head>
 <body>
+    {% include 'templates/navbar.html' %}
     {% block content %}{% endblock %}
 
     <!-- jQuery (necesario para los plugins JavaScript de Bootstrap) -->
