--- a/app/Views/templates/navbar.html
+++ b/app/Views/templates/navbar.html
@@ -10,7 +10,7 @@
     </div>
     <div id="main-navbar" class="collapse navbar-collapse">
         <ul class="nav navbar-nav navbar-right">
-            <li><a href="#">Enlace 1</a></li>
+            <li><a href="{{ path_for('products') }}">Productos</a></li>
             <li><a href="#">Enlace 2</a></li>
             <li><a href="#">Enlace 3</a></li>
         </ul>
