Añade botones para limpiar inputs

--- a/app/Views/templates/base.html
+++ b/app/Views/templates/base.html
@@ -11,6 +11,7 @@
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/bootstrap-theme.min.css">
+    <link rel="stylesheet" href="css/bootstrap-clearinput.css">
 
     <!-- HTML5 shim y Respond.js para soporte IE8 de elementos HTML5 y media queries -->
     <!-- WARNING: Respond.js no funciona si ves la página via file:// -->
@@ -26,5 +27,6 @@
     <!-- jQuery (necesario para los plugins JavaScript de Bootstrap) -->
     <script src="js/jquery-3.1.0.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
+    <script src="js/bootstrap-clearinput.js"></script>
 </body>
 </html>
