--- a/app/Views/products.html
+++ b/app/Views/products.html
@@ -12,27 +12,28 @@
                     </div>
                     <div class="panel-body">
                         <form action="{{ path_for('products') }}" method="get" role="form">
-                            <div class="form-group">
+                            <div class="form-group has-feedback has-clear">
                                 <label for="codigoProducto">Código</label>
                                 <input id="codigoProducto" class="form-control" type="text" name="codigoProducto" placeholder="Código del producto" value="{{ input.codigoProducto }}">
+                                <span class="form-control-clear glyphicon glyphicon-remove form-control-feedback {% if not input.codigoProducto %}hidden{% endif %}"></span>
                             </div>
-                            <div class="form-group">
+                            <div class="form-group has-feedback has-clear">
                                 <label for="categoriaProducto">Categoría</label>
                                 <input id="categoriaProducto" class="form-control" type="text" name="categoriaProducto" placeholder="Categoría del producto" value="{{ input.categoriaProducto }}">
+                                <span class="form-control-clear glyphicon glyphicon-remove form-control-feedback {% if not input.categoriaProducto %}hidden{% endif %}"></span>
                             </div>
-                            <div class="form-group">
+                            <div class="form-group has-feedback has-clear">
                                 <label for="marcaProducto">Marca</label>
                                 <input id="marcaProducto" class="form-control" type="text" name="marcaProducto" placeholder="Marca del producto" value="{{ input.marcaProducto }}">
+                                <span class="form-control-clear glyphicon glyphicon-remove form-control-feedback {% if not input.marcaProducto %}hidden{% endif %}"></span>
                             </div>
-                            <div class="form-group">
+                            <div class="form-group has-feedback has-clear">
                                 <label for="nombreProducto">Nombre</label>
                                 <input id="nombreProducto" class="form-control" type="text" name="nombreProducto" placeholder="Nombre del producto" value="{{ input.nombreProducto }}">
+                                <span class="form-control-clear glyphicon glyphicon-remove form-control-feedback {% if not input.nombreProducto %}hidden{% endif %}"></span>
                             </div>
                             <button class="btn btn-primary" type="submit">
                                 <span class="glyphicon glyphicon-search" aria-hidden="true"></span> Buscar
-                            </button>
-                            <button class="btn btn-default" type="reset">
-                                <span class="glyphicon glyphicon-trash" aria-hidden="true"></span> Limpiar
                             </button>
                         </form>
                     </div>
