Añade botones de paginación en la vista de productos

--- a/app/Views/templates/base.html
+++ b/app/Views/templates/base.html
@@ -13,6 +13,8 @@
     <link rel="stylesheet" href="css/bootstrap-theme.min.css">
     <link rel="stylesheet" href="css/bootstrap-clearinput.css">
 
+    <link rel="stylesheet" href="css/utility.css">
+
     <!-- HTML5 shim y Respond.js para soporte IE8 de elementos HTML5 y media queries -->
     <!-- WARNING: Respond.js no funciona si ves la página via file:// -->
     <!--[if lt IE 9]>
