--- a/app/Views/products.html
+++ b/app/Views/products.html
@@ -40,7 +40,7 @@
                 </div>
             </div>
             <div class="col-sm-10 col-sm-offset-1 col-md-8 col-md-offset-0 col-lg-9">
-                <div class="panel {% if products %}panel-success{% else %}panel-default{% endif %}">
+                <div class="panel no-margin-bottom {% if products %}panel-success{% else %}panel-default{% endif %}">
                     <div class="panel-heading">
                         <h2 class="panel-title">Resultados</h2>
                     </div>
@@ -66,10 +66,33 @@
                                 <td class="text-center" colspan="6">No se encontraron resultados</td>
                             </tr>
                             {% endfor %}
+
                         </table>
                     </div>
                 </div>
+                <nav aria-label="Page navigation">
+                    <ul class="pagination">
+                        <li class="{% if pagination.currentPage == 1 %}disabled{% endif %}">
+                            <a href="{% if pagination.currentPage > 1 %}{{ path_for('products') }}?productsPage={{ pagination.currentPage - 1 }}{% else %}#{% endif %}" aria-label="Previous">
+                                <span aria-hidden="true">&laquo;</span>
+                            </a>
+                        </li>
+                        {% for i in pagination.currentPage - 3 .. pagination.currentPage + 3 if pagination.currentPage %}
+                            {% if i >= 1 and i <= pagination.totalPages%}
+                                <li class="{% if i == pagination.currentPage %}active{% endif %}"><a href="{{ path_for('products') }}?productsPage={{ i }}">{{ i }}</a></li>
+                            {% endif %}
+                        {% endfor %}
+                        <li class="{% if pagination.currentPage == pagination.totalPages %}disabled{% endif %}">
+                            <a href="{% if pagination.currentPage < pagination.totalPages %}{{ path_for('products') }}?productsPage={{ pagination.currentPage + 1 }}{% else %}#{% endif %}" aria-label="Next">
+                                <span aria-hidden="true">&raquo;</span>
+                            </a>
+                        </li>
+                    </ul>
+                </nav>
             </div>
         </div>
     </div>
+    <pre>
+        {{ dump(pagination) }}
+    </pre>
 {% endblock %}
