--- a/app/Views/templates/base.html
+++ b/app/Views/templates/base.html
@@ -30,5 +30,7 @@
     <script src="js/jquery-3.1.0.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/bootstrap-clearinput.js"></script>
+
+    <script src="js/link-submit-form.js"></script>
 </body>
 </html>
