--- a/app/Views/products.html
+++ b/app/Views/products.html
@@ -34,16 +34,15 @@
                             </div>
                             <div class="form-group">
                                 <label for="productsPerPage">Cantidad por página</label>
-                                <select class="form-control" name="productsPerPage">
+                                <select id="productsPerPage" class="form-control" name="itemsPerPage">
                                     {% set perPageOpts = [10, 25, 50] %}
                                     {% for opt in perPageOpts %}
-                                        <option value="{{ opt }}" {% if pagination.perPage == opt %}selected{% endif %}>{{ opt }}</option>
+                                        <option value="{{ opt }}" {% if pagination.itemsPerPage == opt %}selected{% endif %}>{{ opt }}</option>
                                     {% endfor %}
                                 </select>
                             </div>
-                            <input type="hidden" name="productsPage" value="{{ pagination.currentPage }}">
-                            <!-- <input type="hidden" name="productsPerPage" value="{{ pagination.perPage }}"> -->
-                            <button class="btn btn-primary link-submit" type="submit" data-input="productsPage" data-value="1" >
+                            <input type="hidden" name="currentPage" value="{{ pagination.currentPage }}">
+                            <button class="btn btn-primary link-submit" type="submit" data-input="currentPage" data-value="1" >
                                 <span class="glyphicon glyphicon-search" aria-hidden="true"></span> Buscar
                             </button>
                         </form>
@@ -84,17 +83,17 @@
                 <nav aria-label="Page navigation">
                     <ul class="pagination">
                         <li class="{% if pagination.currentPage == 1 %}disabled{% endif %}">
-                            <a disabled class="link-submit" data-input="productsPage" data-value="{% if pagination.currentPage > 1 %}{{ pagination.currentPage - 1 }}{% else %}1{% endif %}" href="#" aria-label="Previous">
+                            <a disabled class="link-submit" data-input="currentPage" data-value="{% if pagination.currentPage > 1 %}{{ pagination.currentPage - 1 }}{% else %}1{% endif %}" href="#" aria-label="Previous">
                                 <span aria-hidden="true">&laquo;</span>
                             </a>
                         </li>
                         {% for i in pagination.currentPage - 3 .. pagination.currentPage + 3 if pagination.currentPage %}
                             {% if i >= 1 and i <= pagination.totalPages%}
-                                <li class="{% if i == pagination.currentPage %}active{% endif %}"><a class="link-submit" data-input="productsPage" data-value="{{ i }}" href="#">{{ i }}</a></li>
+                                <li class="{% if i == pagination.currentPage %}active{% endif %}"><a class="link-submit" data-input="currentPage" data-value="{{ i }}" href="#">{{ i }}</a></li>
                             {% endif %}
                         {% endfor %}
                         <li class="{% if pagination.currentPage == pagination.totalPages %}disabled{% endif %}">
-                            <a class="link-submit" data-input="productsPage" data-value="{% if pagination.currentPage < pagination.totalPages %}{{ pagination.currentPage + 1 }}{% else %}{{ pagination.totalPages }}{% endif %}" href="#" aria-label="Next">
+                            <a class="link-submit" data-input="currentPage" data-value="{% if pagination.currentPage < pagination.totalPages %}{{ pagination.currentPage + 1 }}{% else %}{{ pagination.totalPages }}{% endif %}" href="#" aria-label="Next">
                                 <span aria-hidden="true">&raquo;</span>
                             </a>
                         </li>
