--- a/app/Views/categories.html
+++ b/app/Views/categories.html
@@ -1,6 +1,6 @@
 {% extends 'templates/base.html' %}
 
-{% block title  %}Productos{% endblock %}
+{% block title %}Categorías{% endblock %}
 
 {% block content %}
     <div class="container-fluid">
@@ -8,33 +8,23 @@
             <div class="col-sm-10 col-sm-offset-1 col-md-4 col-md-offset-0 col-lg-3">
                 <div class="panel panel-default">
                     <div class="panel-heading">
-                        <h2 class="panel-title">Búsqueda de Productos</h2>
+                        <h2 class="panel-title">Búsqueda de Categorías</h2>
                     </div>
                     <div class="panel-body">
-                        <form id="productsForm" action="{{ path_for('products') }}" method="get" role="form">
+                        <form id="categoriesForm" action="{{ path_for('categories') }}" method="get" role="form">
                             <div class="form-group has-feedback has-clear">
-                                <label for="codigoProducto">Código</label>
-                                <input id="codigoProducto" class="form-control" type="text" name="codigoProducto" placeholder="Código del producto" value="{{ input.codigoProducto }}">
-                                <span class="form-control-clear glyphicon glyphicon-remove form-control-feedback {% if not input.codigoProducto %}hidden{% endif %}"></span>
+                                <label for="codigoCategoria">Código</label>
+                                <input id="codigoCategoria" class="form-control" type="text" name="codigoCategoria" placeholder="Código de la categoría" value="{{ input.codigoCategoria }}">
+                                <span class="form-control-clear glyphicon glyphicon-remove form-control-feedback {% if not input.codigoCategoria %}hidden{% endif %}"></span>
                             </div>
                             <div class="form-group has-feedback has-clear">
-                                <label for="categoriaProducto">Categoría</label>
-                                <input id="categoriaProducto" class="form-control" type="text" name="categoriaProducto" placeholder="Categoría del producto" value="{{ input.categoriaProducto }}">
-                                <span class="form-control-clear glyphicon glyphicon-remove form-control-feedback {% if not input.categoriaProducto %}hidden{% endif %}"></span>
-                            </div>
-                            <div class="form-group has-feedback has-clear">
-                                <label for="marcaProducto">Marca</label>
-                                <input id="marcaProducto" class="form-control" type="text" name="marcaProducto" placeholder="Marca del producto" value="{{ input.marcaProducto }}">
-                                <span class="form-control-clear glyphicon glyphicon-remove form-control-feedback {% if not input.marcaProducto %}hidden{% endif %}"></span>
-                            </div>
-                            <div class="form-group has-feedback has-clear">
-                                <label for="nombreProducto">Nombre</label>
-                                <input id="nombreProducto" class="form-control" type="text" name="nombreProducto" placeholder="Nombre del producto" value="{{ input.nombreProducto }}">
-                                <span class="form-control-clear glyphicon glyphicon-remove form-control-feedback {% if not input.nombreProducto %}hidden{% endif %}"></span>
+                                <label for="nombreCategoria">Nombre</label>
+                                <input id="nombreCategoria" class="form-control" type="text" name="nombreCategoria" placeholder="Nombre de la categoría" value="{{ input.nombreCategoria }}">
+                                <span class="form-control-clear glyphicon glyphicon-remove form-control-feedback {% if not input.nombreCategoria %}hidden{% endif %}"></span>
                             </div>
                             <div class="form-group">
-                                <label for="productsPerPage">Cantidad por página</label>
-                                <select id="productsPerPage" class="form-control" name="itemsPerPage">
+                                <label for="categoriesPerPage">Cantidad por página</label>
+                                <select id="categoriesPerPage" class="form-control" name="itemsPerPage">
                                     {% set perPageOpts = [10, 25, 50] %}
                                     {% for opt in perPageOpts %}
                                         <option value="{{ opt }}" {% if pagination.itemsPerPage == opt %}selected{% endif %}>{{ opt }}</option>
@@ -42,7 +32,7 @@
                                 </select>
                             </div>
                             <input type="hidden" name="currentPage" value="{{ pagination.currentPage }}">
-                            <button class="btn btn-primary link-submit" type="button" data-input="currentPage" data-value="1" >
+                            <button class="btn btn-primary link-submit" type="button" data-input="currentPage" data-value="1">
                                 <span class="glyphicon glyphicon-search" aria-hidden="true"></span> Buscar
                             </button>
                         </form>
@@ -50,7 +40,7 @@
                 </div>
             </div>
             <div class="col-sm-10 col-sm-offset-1 col-md-8 col-md-offset-0 col-lg-9">
-                <div class="panel no-margin-bottom {% if products %}panel-success{% else %}panel-default{% endif %}">
+                <div class="panel no-margin-bottom {% if categories %}panel-success{% else %}panel-default{% endif %}">
                     <div class="panel-heading">
                         <h2 class="panel-title">{{ pagination.totalItems }} Resultados</h2>
                     </div>
@@ -58,25 +48,18 @@
                         <table class="table table-striped">
                             <tr>
                                 <th>Código</th>
-                                <th>Categoría</th>
-                                <th>Marca</th>
                                 <th>Nombre</th>
-                                <th>Cantidad</th>
                             </tr>
-                            {% for product in products %}
+                            {% for category in categories %}
                             <tr>
-                                <td>{{ product.codigo_mas }}</td>
-                                <td>{{ product.nombre_cat }}</td>
-                                <td>{{ product.marca_mas }}</td>
-                                <td>{{ product.nombre_mas }}</td>
-                                <td>{{ product.saldou_mas }}</td>
+                                <td>{{ category.codigo_cat }}</td>
+                                <td>{{ category.nombre_cat }}</td>
                             </tr>
                             {% else %}
                             <tr>
-                                <td class="text-center" colspan="6">No se encontraron resultados</td>
+                                <td class="text-center" colspan="2">No se encontraron resultados</td>
                             </tr>
                             {% endfor %}
-
                         </table>
                     </div>
                 </div>
