--- a/app/Views/templates/navbar.html
+++ b/app/Views/templates/navbar.html
@@ -10,9 +10,8 @@
     </div>
     <div id="main-navbar" class="collapse navbar-collapse">
         <ul class="nav navbar-nav navbar-right">
-            <li><a href="{{ path_for('products') }}">Productos</a></li>
-            <li><a href="#">Enlace 2</a></li>
-            <li><a href="#">Enlace 3</a></li>
+            <li class="{% if uri_path == path_for('products') %}active{% endif %}"><a href="{{ path_for('products') }}">Productos</a></li>
+            <li class="{% if uri_path == path_for('categories') %}active{% endif %}"><a href="{{ path_for('categories') }}">Categorías</a></li>
         </ul>
     </div>
 </nav>
