--- a/app/Views/products.html
+++ b/app/Views/products.html
@@ -80,27 +80,7 @@
                         </table>
                     </div>
                 </div>
-                <nav aria-label="Page navigation">
-                    <ul class="pagination">
-                        <li class="{% if pagination.currentPage <= 1 %}disabled{% endif %}">
-                            <a disabled class="link-submit" data-input="currentPage" data-value="{% if pagination.currentPage > 1 %}{{ pagination.currentPage - 1 }}{% else %}1{% endif %}" href="#" aria-label="Previous">
-                                <span aria-hidden="true">&laquo;</span>
-                            </a>
-                        </li>
-                        {% for i in pagination.currentPage - 3 .. pagination.currentPage + 3 if pagination.currentPage and pagination.totalPages > 0 %}
-                            {% if i >= 1 and i <= pagination.totalPages%}
-                                <li class="{% if i == pagination.currentPage %}active{% endif %}"><a class="link-submit" data-input="currentPage" data-value="{{ i }}" href="#">{{ i }}</a></li>
-                            {% endif %}
-                        {% else %}
-                            <li class="disabled"><a href="#">0</a></li>
-                        {% endfor %}
-                        <li class="{% if pagination.currentPage >= pagination.totalPages %}disabled{% endif %}">
-                            <a class="link-submit" data-input="currentPage" data-value="{% if pagination.currentPage < pagination.totalPages %}{{ pagination.currentPage + 1 }}{% else %}{{ pagination.totalPages }}{% endif %}" href="#" aria-label="Next">
-                                <span aria-hidden="true">&raquo;</span>
-                            </a>
-                        </li>
-                    </ul>
-                </nav>
+                {% include 'templates/listpagination.html' %}
             </div>
         </div>
     </div>
