--- a/app/Views/templates/navbar.html
+++ b/app/Views/templates/navbar.html
@@ -12,6 +12,7 @@
         <ul class="nav navbar-nav navbar-right">
             <li class="{% if uri_path == path_for('products') %}active{% endif %}"><a href="{{ path_for('products') }}">Productos</a></li>
             <li class="{% if uri_path == path_for('categories') %}active{% endif %}"><a href="{{ path_for('categories') }}">Categorías</a></li>
+            <li class="{% if uri_path == path_for('providers') %}active{% endif %}"><a href="{{ path_for('providers') }}">Proveedores</a></li>
         </ul>
     </div>
 </nav>
