Cambia el botón Buscar de tipo button a submit en los campos de búsqueda

--- a/app/Views/products.html
+++ b/app/Views/products.html
@@ -42,7 +42,7 @@
                                 </select>
                             </div>
                             <input type="hidden" name="currentPage" value="{{ pagination.currentPage }}">
-                            <button class="btn btn-primary link-submit" type="button" data-input="currentPage" data-value="1" >
+                            <button class="btn btn-primary link-submit" type="submit" data-input="currentPage" data-value="1" >
                                 <span class="glyphicon glyphicon-search" aria-hidden="true"></span> Buscar
                             </button>
                         </form>
