Agrega la vista de las facturas

--- a/app/Views/templates/navbar.html
+++ b/app/Views/templates/navbar.html
@@ -13,6 +13,7 @@
             <li class="{% if uri_path == path_for('products') %}active{% endif %}"><a href="{{ path_for('products') }}">Productos</a></li>
             <li class="{% if uri_path == path_for('categories') %}active{% endif %}"><a href="{{ path_for('categories') }}">Categorías</a></li>
             <li class="{% if uri_path == path_for('providers') %}active{% endif %}"><a href="{{ path_for('providers') }}">Proveedores</a></li>
+            <li class="{% if uri_path == path_for('invoices') %}active{% endif %}"><a href="{{ path_for('invoices') }}">Facturas</a></li>
         </ul>
     </div>
 </nav>
