Agrega la vista de las bodegas

--- a/app/Views/templates/navbar.html
+++ b/app/Views/templates/navbar.html
@@ -14,6 +14,7 @@
             <li class="{% if uri_path == path_for('categories') %}active{% endif %}"><a href="{{ path_for('categories') }}">Categorías</a></li>
             <li class="{% if uri_path == path_for('providers') %}active{% endif %}"><a href="{{ path_for('providers') }}">Proveedores</a></li>
             <li class="{% if uri_path == path_for('invoices') %}active{% endif %}"><a href="{{ path_for('invoices') }}">Facturas</a></li>
+            <li class="{% if uri_path == path_for('warehouses') %}active{% endif %}"><a href="{{ path_for('warehouses') }}">Bodegas</a></li>
         </ul>
     </div>
 </nav>
