--- a/app/Views/templates/navbar.html
+++ b/app/Views/templates/navbar.html
@@ -15,6 +15,7 @@
             <li class="{% if uri_path == path_for('providers') %}active{% endif %}"><a href="{{ path_for('providers') }}">Proveedores</a></li>
             <li class="{% if uri_path == path_for('invoices') %}active{% endif %}"><a href="{{ path_for('invoices') }}">Facturas</a></li>
             <li class="{% if uri_path == path_for('warehouses') %}active{% endif %}"><a href="{{ path_for('warehouses') }}">Bodegas</a></li>
+            <li class="{% if uri_path == path_for('stores') %}active{% endif %}"><a href="{{ path_for('stores') }}">Sucursales</a></li>
         </ul>
     </div>
 </nav>
