Cambia las categorías para utilizar la nueva BD

--- a/app/Views/categories.html
+++ b/app/Views/categories.html
@@ -52,8 +52,8 @@
                             </tr>
                             {% for category in categories %}
                             <tr>
-                                <td>{{ category.codigo_cat }}</td>
-                                <td>{{ category.nombre_cat }}</td>
+                                <td>{{ category.Codigo }}</td>
+                                <td>{{ category.Nombre }}</td>
                             </tr>
                             {% else %}
                             <tr>
