--- a/app/Views/templates/navbar.html
+++ b/app/Views/templates/navbar.html
@@ -10,7 +10,27 @@
     </div>
     <div id="main-navbar" class="collapse navbar-collapse">
         <ul class="nav navbar-nav navbar-right">
-            <li class="{% if uri_path == path_for('products') %}active{% endif %}"><a href="{{ path_for('products') }}">Productos</a></li>
+            <li class="dropdown">
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+                    <span class="glyphicon glyphicon-gift"></span>
+                    Productos
+                    <span class="caret"></span>
+                </a>
+                <ul class="dropdown-menu">
+                    <li>
+                        <a href="{{ path_for('products') }}">
+                            <span class="glyphicon glyphicon-gift"></span>
+                            Ver Productos
+                        </a>
+                    </li>
+                    <li>
+                        <a href="{{ path_for('brands') }}">
+                            <span class="glyphicon glyphicon-tags"></span>
+                            Ver Marcas
+                        </a>
+                    </li>
+                </ul>
+            </li>
             <li class="{% if uri_path == path_for('categories') %}active{% endif %}"><a href="{{ path_for('categories') }}">Categorías</a></li>
             <li class="{% if uri_path == path_for('providers') %}active{% endif %}"><a href="{{ path_for('providers') }}">Proveedores</a></li>
             <li class="{% if uri_path == path_for('invoices') %}active{% endif %}"><a href="{{ path_for('invoices') }}">Facturas</a></li>
