Arregla error en las rutas relativas del template base

--- a/app/Views/templates/base.html
+++ b/app/Views/templates/base.html
@@ -4,16 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico">
+    <link rel="shortcut icon" type="image/x-icon" href="/img/favicon.ico">
 
     <title>{% block title %}{% endblock %}</title>
 
     <!-- Bootstrap -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="css/bootstrap-theme.min.css">
-    <link rel="stylesheet" href="css/bootstrap-clearinput.css">
+    <link href="/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="/css/bootstrap-theme.min.css">
+    <link rel="stylesheet" href="/css/bootstrap-clearinput.css">
 
-    <link rel="stylesheet" href="css/utility.css">
+    <link rel="stylesheet" href="/css/utility.css">
 
     <!-- HTML5 shim y Respond.js para soporte IE8 de elementos HTML5 y media queries -->
     <!-- WARNING: Respond.js no funciona si ves la página via file:// -->
@@ -27,10 +27,10 @@
     {% block content %}{% endblock %}
 
     <!-- jQuery (necesario para los plugins JavaScript de Bootstrap) -->
-    <script src="js/jquery-3.1.0.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <script src="js/bootstrap-clearinput.js"></script>
+    <script src="/js/jquery-3.1.0.min.js"></script>
+    <script src="/js/bootstrap.min.js"></script>
+    <script src="/js/bootstrap-clearinput.js"></script>
 
-    <script src="js/link-submit-form.js"></script>
+    <script src="/js/link-submit-form.js"></script>
 </body>
 </html>
