Agrega el formulario para crear un nuevo producto

--- a/app/Views/templates/navbar.html
+++ b/app/Views/templates/navbar.html
@@ -18,6 +18,12 @@
                 </a>
                 <ul class="dropdown-menu">
                     <li>
+                        <a href="{{ path_for('products/createform') }}">
+                            <span class="glyphicon glyphicon-plus-sign"></span>
+                            Nuevo Producto
+                        </a>
+                    </li>
+                    <li>
                         <a href="{{ path_for('products') }}">
                             <span class="glyphicon glyphicon-gift"></span>
                             Ver Productos
