--- a/app/Views/products/newproduct.html
+++ b/app/Views/products/newproduct.html
@@ -61,8 +61,9 @@
                             <div class="form-group">
                                 <label for="categoriaDetProducto">Categoría DET</label>
                                 <select class="form-control" name="categoriaDetProducto" id="categoriaDetProducto">
-                                    <option value="option">option</option>
-                                    <option value="option">option</option>
+                                    {% for detcat in detcategories %}
+                                        <option value="{{ detcat.CodigoBienDet }}">{{ detcat.Descripcion }}</option>
+                                    {% endfor %}
                                 </select>
                             </div>
                             <div class="form-group">
