--- a/app/Views/products/newproduct.html
+++ b/app/Views/products/newproduct.html
@@ -69,8 +69,9 @@
                             <div class="form-group">
                                 <label for="referenciaLibroDetProducto">Referencia Libro DET</label>
                                 <select class="form-control" name="referenciaLibroDetProducto" id="referenciaLibroDetProducto">
-                                    <option value="option">option</option>
-                                    <option value="option">option</option>
+                                    {% for reference in detreferences %}
+                                        <option value="{{ reference.CodigoLibroDet }}">{{ reference.Descripcion }}</option>
+                                    {% endfor %}
                                 </select>
                             </div>
                             <div class="checkbox">
