Cambia Categories para utilizar el código en lugar de una ID

--- a/app/Views/categories.html
+++ b/app/Views/categories.html
@@ -52,7 +52,7 @@
                             </tr>
                             {% for category in categories %}
                             <tr>
-                                <td>{{ category.Codigo }}</td>
+                                <td>{{ category.CategoriaProductoID }}</td>
                                 <td>{{ category.Nombre }}</td>
                             </tr>
                             {% else %}
