Cambia Products para adoptar cambios en Categories

--- a/app/Views/products/products.html
+++ b/app/Views/products/products.html
@@ -14,7 +14,7 @@
                         <form id="productsForm" action="{{ path_for('products') }}" method="get" role="form">
                             <div class="form-group has-feedback has-clear">
                                 <label for="codigoProducto">Código</label>
-                                <input id="codigoProducto" class="form-control" type="text" name="codigoProducto" placeholder="Código del producto" value="{{ input.codigoCategoria }}{{ input.codigoProducto }}">
+                                <input id="codigoProducto" class="form-control" type="text" name="codigoProducto" placeholder="Código del producto" value="{{ input.codigoProducto }}">
                                 <span class="form-control-clear glyphicon glyphicon-remove form-control-feedback {% if not input.codigoProducto %}hidden{% endif %}"></span>
                             </div>
                             <div class="form-group">
@@ -74,7 +74,7 @@
                             </tr>
                             {% for product in products %}
                             <tr>
-                                <td>{{ product.CodigoCategoria }}{{ product.CodigoProducto }}</td>
+                                <td>{{ product.CategoriaProductoID }}{{ product.CodigoProducto }}</td>
                                 <td>{{ product.NombreCategoria }}</td>
                                 <td>{{ product.NombreMarca }}</td>
                                 <td>{{ product.Descripcion }}</td>
