--- a/app/Views/templates/base.html
+++ b/app/Views/templates/base.html
@@ -32,5 +32,6 @@
     <script src="/js/bootstrap-clearinput.js"></script>
 
     <script src="/js/link-submit-form.js"></script>
+    <script src="/js/new-product-set-cat-code.js"></script>
 </body>
 </html>
