--- a/app/Views/providers.html
+++ b/app/Views/providers.html
@@ -6,17 +6,12 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-sm-10 col-sm-offset-1 col-md-4 col-md-offset-0 col-lg-3">
-                <div class="panel panel-default">
+                <div class="panel panel-primary">
                     <div class="panel-heading">
                         <h2 class="panel-title">Búsqueda de Proveedores</h2>
                     </div>
                     <div class="panel-body">
                         <form id="providersForm" action="{{ path_for('providers') }}" method="get" role="form">
-                            <div class="form-group has-feedback has-clear">
-                                <label for="codigoProveedor">Código</label>
-                                <input id="codigoProveedor" class="form-control" type="text" name="codigoProveedor" placeholder="Código de el proveedor" value="{{ input.codigoProveedor }}">
-                                <span class="form-control-clear glyphicon glyphicon-remove form-control-feedback {% if not input.codigoProveedor %}hidden{% endif %}"></span>
-                            </div>
                             <div class="form-group has-feedback has-clear">
                                 <label for="nombreProveedor">Nombre</label>
                                 <input id="nombreProveedor" class="form-control" type="text" name="nombreProveedor" placeholder="Nombre de el proveedor" value="{{ input.nombreProveedor }}">
@@ -42,7 +37,7 @@
                                 </select>
                             </div>
                             <input type="hidden" name="currentPage" value="{{ pagination.currentPage }}">
-                            <button class="btn btn-primary link-submit" type="submit" data-input="currentPage" data-value="1">
+                            <button class="btn btn-block btn-info link-submit" type="submit" data-input="currentPage" data-value="1">
                                 <span class="glyphicon glyphicon-search" aria-hidden="true"></span> Buscar
                             </button>
                         </form>
@@ -57,25 +52,21 @@
                     <div class="table-responsive">
                         <table class="table table-striped">
                             <tr>
-                                <th>Código</th>
                                 <th>Nombre</th>
                                 <th>Registro</th>
                                 <th>NIT</th>
-                                <th>Dirección</th>
-                                <th>Teléfono</th>
+                                <th>Giro</th>
                             </tr>
                             {% for provider in providers %}
                             <tr>
-                                <td>{{ provider.codigo_prov }}</td>
-                                <td>{{ provider.nombre_prov }}</td>
-                                <td>{{ provider.numreg_prov }}</td>
-                                <td>{{ provider.numnit_prov }}</td>
-                                <td>{{ provider.direccion_prov }}</td>
-                                <td>{{ provider.telefono_prov }}</td>
+                                <td>{{ provider.NombreComercial }}</td>
+                                <td>{{ provider.Registro }}</td>
+                                <td>{{ provider.NumeroNIT }}</td>
+                                <td>{{ provider.Giro }}</td>
                             </tr>
                             {% else %}
                             <tr>
-                                <td class="text-center" colspan="7">No se encontraron resultados</td>
+                                <td class="text-center" colspan="4">No se encontraron resultados</td>
                             </tr>
                             {% endfor %}
                         </table>
