Cambia Proveedores para adoptar los cambios a la nueva BD

--- a/app/Views/providers/providers.html
+++ b/app/Views/providers/providers.html
@@ -61,7 +61,7 @@
                             <tr>
                                 <td>{{ provider.NombreComercial }}</td>
                                 <td>{{ provider.Registro }}</td>
-                                <td>{{ provider.NumeroNIT }}</td>
+                                <td>{{ provider.NIT }}</td>
                                 <td>{{ provider.Giro }}</td>
                             </tr>
                             {% else %}
